.taskfiles/Kubernetes/iperf2/ClientJob.tmpl.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: &name "${CLIENT_NAME}"
  namespace: "${CLIENT_NS}"
  labels:
    jobs.home.arpa/iperf2: "client"
spec:
  podSelector:
    matchLabels:
      job-name: *name
  policyTypes:
    - "Egress"
  egress:
    - to:
        - ipBlock:
            cidr: "0.0.0.0/0"
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              job-name: "${SERVER_NAME}"
      ports:
        - port: 5001
