.taskfiles/Kubernetes/iperf2/ServerJob.tmpl.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name "${SERVER_NAME}"
  namespace: "${SERVER_NS}"
  labels:
    jobs.home.arpa/iperf2: "server"
spec:
  type: ClusterIP
  selector:
    job-name: *name
  ports:
    - name: "iperf"
      protocol: "TCP"
      port: &port ${SERVER_PORT}
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: &name "${SERVER_NAME}"
  namespace: "${SERVER_NS}"
  labels:
    jobs.home.arpa/iperf2: "server"
spec:
  podSelector:
    matchLabels:
      job-name: *name
  policyTypes:
    - "Ingress"
    - "Egress"
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              job-name: "${CLIENT_NAME}"
      ports:
        - port: 5001
  egress:
    - to:
        - ipBlock:
            cidr: "0.0.0.0/0"
